# sandsmark-notificationd

./: CMakeLists.txt  Manager.cpp  Manager.h  Widget.cpp  Widget.h  icons.qrc  main.cpp  sandsmark-notificationd.desktop
